--- a/history.html
+++ b/history.html
@@ -102,7 +102,7 @@
                     `<tr>
                         <td>${p.start}</td>
                         <td>${p.end}</td>
-                        <td><button type="button" class="btn btn-primary">Details</button></td>
+                        <td><button type="button" class="btn btn-primary" onclick="endBooking('${p.id}')">End Booking</button></td>
                     </tr>`));
             }
             if (data.pending.length > 0) {
@@ -111,7 +111,9 @@
                     `<tr>
                         <td>${p.start}</td>
                         <td>${p.end}</td>
-                        <td><button type="button" class="btn btn-primary">Details</button></td>
+                        <td><button type="button" class="btn btn-primary" onclick="startBooking('${p.id}')">Start Booking</button></td>
+                        <td><button type="button" class="btn btn-danger" onclick="cancelBooking('${p.id}')">Cancel Booking</button></td>
+                        <td><button type="button" class="btn btn-warning" onclick="reportIssue('${p.id}')">Report issue</button></td>
                     </tr>`));
             }
             if (data.finished.length) {
@@ -132,4 +134,43 @@
             }
         }, function() {});
     });
+
+    function startBooking(id) {
+        callEndpoint(API_ROOT + "/confirmBooking", "POST", {
+            "bookingId": id,
+            "confirmed": true
+        }, function(data) {
+            console.log(data);
+            loadPage("history.html");
+        }, function(status) {
+            console.error(data);
+        });
+    }
+
+    function cancelBooking(id) {
+        callEndpoint(API_ROOT + "/confirmBooking", "POST", {
+            "bookingId": id,
+            "confirmed": false
+        }, function(data) {
+            console.log(data);
+            loadPage("history.html");
+        }, function(status) {
+            console.error(data);
+        });
+    }
+
+    function endBooking(id) {
+        callEndpoint(API_ROOT + "/checkoutBooking", "POST", {
+            "bookingId": id,
+        }, function(data) {
+            console.log(data);
+            loadPage("history.html");
+        }, function(status) {
+            console.error(data);
+        });
+    }
+
+    function reportIssue(id) {
+
+    }
 </script>
